<resources>
    <string name="app_name">SpellBook</string>

    <string-array name="classes">
        <item>All Classes</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_spellbooks">Show spellbooks</string>
    <string name="full_spell_list">Full Spell List</string>
    <string name="saved_spellbooks">Saved Spellbooks</string>
    <string name="spell_school">Spell School</string>
    <string name="character_name">Character Name</string>
    <string name="add_spellbook">Add Spellbook</string>
    <string name="classes_can_not_be_empty">Classes can not be empty</string>
    <string name="create_spellbook">Create Spellbook</string>
    <string name="casting_time">Casting time:</string>
    <string name="range">Range:</string>
    <string name="components">Components:</string>
    <string name="duration">Duration:</string>
    <string name="classes">Classes:</string>
    <string name="add_to_spellbook">Add to Spellbook</string>
    <string name="edit_spellbook">Edit Spellbook</string>
    <string name="add_class">Add Class</string>
    <string name="save_changes">Save changes</string>
    <string name="search">Search</string>
    <string name="level_can_not_be_empty">Level can not be empty</string>
    <string name="Edit">Edit</string>
    <string name="cancel">Cancel</string>

</resources>
