<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:background="?attr/colorBackgroundFloating"
                                             tools:layout_editor_absoluteY="25dp">

    <TextView
            android:text="@string/add_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <Spinner
            android:layout_width="365dp"
            android:layout_height="45dp"
            android:id="@+id/class_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/level_np"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/class_spinner" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/level_can_not_be_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/error_text"
            android:textColor="@color/colorAccent"
            android:visibility="gone" tools:layout_editor_absoluteY="281dp" tools:layout_editor_absoluteX="191dp"/>
    <Button
            android:text="Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/add_class_button"
            app:icon="@drawable/ic_add_circle_black_24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/level_np" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_class_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>