<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MainActivity">
    <item android:id="@+id/action_search"
          android:orderInCategory="5"
          android:title="@string/search"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="ifRoom"
          app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/class_spinner"
            android:title="@string/classes"
            app:actionViewClass="android.widget.Spinner"
            app:showAsAction="ifRoom" />

</menu>